--- a/xCalendar.css
+++ b/xCalendar.css
@@ -2,8 +2,20 @@
     position: absolute;
     width:250px;
     font-size:16px;
-    border: 1px solid #aaa;
+    border: 1px solid #777;
     display:none;
+    background: #fff;
+    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+.xCalendar.fullscreen{
+    border-radius: 5px;
+    box-shadow: 0px 0px 25px 2px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 0px 25px 2px rgba(0, 0, 0, 0.2);
+    transition:0.6s;
+    -webkit-transition:0.6s;
+
 }
 .xCalendar-top-panel{
     margin-top: 4%;
@@ -46,6 +58,13 @@
 .xCalendar-switch-btn.prev-month:before{
     border-right: 8px solid #87B23F;
 }
+.xCalendar-switch-btn.prev-month.disabled:before{
+    border-right:8px solid #999 !important;
+}
+.xCalendar-switch-btn.next-month.disabled:before{
+    border-right: 0 !important;
+    border-left:8px solid #999 !important;
+}
 .xCalendar-switch-btn.next-month:before{
     border-right: 0;
     border-left: 8px solid #87B23F;
@@ -76,7 +95,7 @@
     width:100%;
     height:100% ;
     position: absolute;
-
+    border-collapse: collapse;
 
     transition:top 0.6s ease 0s;
 
@@ -91,6 +110,7 @@
 }
 .xCalendar-head-table{
     width:100%;
+    margin-bottom:8px;
 }
 .xCalendar-head-table th{
 
@@ -116,17 +136,26 @@
 .xCalendar-table td.xCalendar-day-today:before{
     content: " ";
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: 2px;
+    right: 2px;
     width: 0;
     height: 0;
-    border-top: 6px solid #87B23F;
+    border-top: 6px solid #517414;
     border-left: 6px solid transparent;
 }
 
-.xCalendar-table td.xCalendar-day-selected{
-    background:#87B23F;
+.xCalendar-table .xCalendar-day.xCalendar-day-selected{
+    background:#8CD98C ;
     color: #fff;
+}
+.xCalendar-table .xCalendar-day.xCalendar-day-disabled{
+    color:#ddd;
+    background: #f5f5f5;
+    cursor: default;
+}
+.xCalendar-table .xCalendar-day.xCalendar-day-disabled:hover{
+    color:#ddd;
+    background: #f5f5f5;
 }
 .xCalendar-table .weekdays{
     color:#999;
@@ -156,6 +185,10 @@
     cursor: pointer;
 }
 .xCalendar .year-panel >.year-block:hover,.xCalendar .month-panel >.month-block:hover,.xCalendar-table td:hover,.xCalendar-switch-btn:hover{
-    background: #87B23F;
+    background: #87b23f;
     color:#fff;
+}
+.xCalendar-switch-btn.disabled:hover{
+    background: transparent;
+
 }
